[project]
name = "sentiment-analysis-with-ngrams"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.1.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torchtext>=0.18.0",
]
